Create HTML structure

--- a/index.html
+++ b/index.html
@@ -4,19 +4,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#ffc40d">
+  <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#ffc40d">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="css/style.css">
   <title>Electro Shit</title>
 </head>
 
 <body>
-  <h1>Hello work!</h1>
+  <div class="container">
+    <header class="header">
+      <h1 class="align-center">Electro ⚡ Shit</h1>
+    </header>
+    <section class="section">
+      <ul class="list">
+        <li class="list-item">
+          <div class="item-head">
+            <div><span class="item-head-count">1</span><span>Вводной автомат</span></div>
+            <span>&\f078;</span>
+          </div>
+          <div class="item-body">
+            <img src="img/blocks/vvod.jpg" width="30%" alt="" class="item-image">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
+              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
+              quaerat cumque.</p>
+          </div>
+        </li>
+        <li class="list-item">
+          <div class="item-head">
+            <div><span class="item-head-count">2</span><span>Счетчик</span></div>
+            <span>&\f078;</span>
+          </div>
+          <div class="item-body">
+            <img src="img/blocks/schetchik.jpg" width="30%" alt="" class="item-image">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
+              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
+              quaerat cumque.</p>
+          </div>
+        </li>
+        <li class="list-item">
+          <div class="item-head">
+            <div><span class="item-head-count">3</span><span>УЗО</span></div>
+            <span>&f078;</span>
+          </div>
+          <div class="item-body">
+            <img src="img/blocks/uzo.webp" width="30%" alt="" class="item-image">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
+              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
+              quaerat cumque.</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <footer class="footer align-center">
+      <small>&copy 2020 «Electro Shit»</small>
+    </footer>
+  </div>
 </body>
-<script src="index.js"></script>
+<script src="js/index.js"></script>
 
 </html>
