Update image size

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span>&\f078;</span>
           </div>
           <div class="item-body">
-            <img src="img/blocks/vvod.jpg" width="30%" alt="" class="item-image">
+            <img src="img/blocks/vvod.jpg" width="128" height="128" alt="" class="item-image">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
               magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
               quaerat cumque.</p>
@@ -40,7 +40,7 @@
             <span>&\f078;</span>
           </div>
           <div class="item-body">
-            <img src="img/blocks/schetchik.jpg" width="30%" alt="" class="item-image">
+            <img src="img/blocks/schetchik.jpg" width="128" height="128" alt="" class="item-image">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
               magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
               quaerat cumque.</p>
@@ -52,7 +52,7 @@
             <span>&f078;</span>
           </div>
           <div class="item-body">
-            <img src="img/blocks/uzo.webp" width="30%" alt="" class="item-image">
+            <img src="img/blocks/uzo.webp" width="128" height="128" alt="" class="item-image">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
               magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
               quaerat cumque.</p>
