--- a/index.html
+++ b/index.html
@@ -20,6 +20,19 @@
     <header class="header">
       <h1 class="align-center">Electro ⚡ Shit</h1>
     </header>
+    <nav>
+      <ul class="nav">
+        <li class="nav-item">
+          <a href="">Щит</a>
+        </li>
+        <li class="nav-item">
+          <a href="">Схемы</a>
+        </li>
+        <li class="nav-item">
+          <a href="">Справка</a>
+        </li>
+      </ul>
+    </nav>
     <section class="section">
       <ul class="list">
         <li class="list-item">
