--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
             <span>&\f078;</span>
           </div>
           <div class="item-body">
-            <img src="img/blocks/vvod.jpg" width="128" height="128" alt="" class="item-image">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
+            <div class="image-cover">
+              <img src="img/blocks/vvod.jpg" width="128" height="128" alt="" class="item-image">
+            </div>
+            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
+              consequatur error
               magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
               quaerat cumque.</p>
           </div>
@@ -53,8 +56,11 @@
             <span>&\f078;</span>
           </div>
           <div class="item-body">
-            <img src="img/blocks/schetchik.jpg" width="128" height="128" alt="" class="item-image">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
+            <div class="image-cover">
+              <img src="img/blocks/schetchik.jpg" width="128" height="128" alt="" class="item-image">
+            </div>
+            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
+              consequatur error
               magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
               quaerat cumque.</p>
           </div>
@@ -65,8 +71,11 @@
             <span>&f078;</span>
           </div>
           <div class="item-body">
-            <img src="img/blocks/uzo.webp" width="128" height="128" alt="" class="item-image">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id consequatur error
+            <div class="image-cover">
+              <img src="img/blocks/uzo.webp" width="128" height="128" alt="" class="item-image">
+            </div>
+            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
+              consequatur error
               magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
               quaerat cumque.</p>
           </div>
