Add arrow animate

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li class="list-item">
           <div class="item-head">
             <div><span class="item-head-count">1</span><span>Вводной автомат</span></div>
-            <span>&\f078;</span>
+            <span class="item-head-arrow">👉</span>
           </div>
           <div class="item-body">
             <div class="image-cover">
@@ -53,7 +53,7 @@
         <li class="list-item">
           <div class="item-head">
             <div><span class="item-head-count">2</span><span>Счетчик</span></div>
-            <span>&\f078;</span>
+            <span class="item-head-arrow">👉</span>
           </div>
           <div class="item-body">
             <div class="image-cover">
@@ -68,7 +68,7 @@
         <li class="list-item">
           <div class="item-head">
             <div><span class="item-head-count">3</span><span>УЗО</span></div>
-            <span>&f078;</span>
+            <span class="item-head-arrow">👉</span>
           </div>
           <div class="item-body">
             <div class="image-cover">
