--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <nav>
       <ul class="nav">
         <li class="nav-item">
-          <a href="">Щит</a>
+          <a href="/">Щит</a>
         </li>
         <li class="nav-item">
-          <a href="">Схемы</a>
+          <a href="shem.html">Схемы</a>
         </li>
         <li class="nav-item">
-          <a href="">Справка</a>
+          <a href="sprav.html">Справка</a>
         </li>
       </ul>
     </nav>
@@ -67,12 +67,57 @@
         </li>
         <li class="list-item">
           <div class="item-head">
-            <div><span class="item-head-count">3</span><span>УЗО</span></div>
+            <div><span class="item-head-count">3</span><span>Вольтметр</span></div>
             <span class="item-head-arrow">👉</span>
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/uzo.webp" width="128" height="128" alt="" class="item-image">
+              <img src="img/blocks/voltmetr.png" width="128" height="128" alt="" class="item-image">
+            </div>
+            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
+              consequatur error
+              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
+              quaerat cumque.</p>
+          </div>
+        </li>
+        <li class="list-item">
+          <div class="item-head">
+            <div><span class="item-head-count">4</span><span>УЗМ</span></div>
+            <span class="item-head-arrow">👉</span>
+          </div>
+          <div class="item-body">
+            <div class="image-cover">
+              <img src="img/blocks/stabil.jpg" width="128" height="128" alt="УЗМ" class="item-image">
+            </div>
+            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
+              consequatur error
+              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
+              quaerat cumque.</p>
+          </div>
+        </li>
+        <li class="list-item">
+          <div class="item-head">
+            <div><span class="item-head-count">5</span><span>УЗО</span></div>
+            <span class="item-head-arrow">👉</span>
+          </div>
+          <div class="item-body">
+            <div class="image-cover">
+              <img src="img/blocks/uzo.webp" width="128" height="128" alt="УЗО" class="item-image">
+            </div>
+            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
+              consequatur error
+              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
+              quaerat cumque.</p>
+          </div>
+        </li>
+        <li class="list-item">
+          <div class="item-head">
+            <div><span class="item-head-count">6</span><span>Автомат</span></div>
+            <span class="item-head-arrow">👉</span>
+          </div>
+          <div class="item-body">
+            <div class="image-cover">
+              <img src="img/blocks/avtomat.jpg" width="128" height="128" alt="Автомат" class="item-image">
             </div>
             <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
               consequatur error
