--- a/index.html
+++ b/index.html
@@ -44,10 +44,11 @@
             <div class="image-cover">
               <img src="img/blocks/vvod.jpg" width="128" height="128" alt="" class="item-image">
             </div>
-            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
-              consequatur error
-              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
-              quaerat cumque.</p>
+            <p class="item-p">
+              Это аппарат коммутации, устанавливаемый перед счетчиком, который позволяет автоматически обесточить
+              линию при аварийной ситуации, или при ремонта проводки.
+              Вводной автомат обычно устанавливают на лестничной
+              площадке или снаружи дома, на улице</p>
           </div>
         </li>
         <li class="list-item">
@@ -59,10 +60,8 @@
             <div class="image-cover">
               <img src="img/blocks/schetchik.jpg" width="128" height="128" alt="" class="item-image">
             </div>
-            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
-              consequatur error
-              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
-              quaerat cumque.</p>
+            <p class="item-p">Это прибор для измерения расхода электроэнергии переменного или постоянного тока (обычно в
+              кВт·ч или А·ч)</p>
           </div>
         </li>
         <li class="list-item">
@@ -74,10 +73,8 @@
             <div class="image-cover">
               <img src="img/blocks/voltmetr.png" width="128" height="128" alt="" class="item-image">
             </div>
-            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
-              consequatur error
-              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
-              quaerat cumque.</p>
+            <p class="item-p">Это электроизмерительный прибор непосредственного отсчёта для определения напряжения или
+              ЭДС в электрических цепях. Подключается параллельно нагрузке или источнику электрической энергии</p>
           </div>
         </li>
         <li class="list-item">
@@ -89,10 +86,9 @@
             <div class="image-cover">
               <img src="img/blocks/stabil.jpg" width="128" height="128" alt="УЗМ" class="item-image">
             </div>
-            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
-              consequatur error
-              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
-              quaerat cumque.</p>
+            <p class="item-p">УЗМ расшифровывается, как «устройство защиты многофункциональное». Этот универсальный
+              аппарат защитит электрооборудование от скачков напряжения, импульсных помех, повышенного или пониженного
+              напряжения в сети</p>
           </div>
         </li>
         <li class="list-item">
@@ -104,10 +100,9 @@
             <div class="image-cover">
               <img src="img/blocks/uzo.webp" width="128" height="128" alt="УЗО" class="item-image">
             </div>
-            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
-              consequatur error
-              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
-              quaerat cumque.</p>
+            <p class="item-p">Расшифровывается как «устройство защитного отключения», а специалисты предпочитают
+              называть его выключателем дифференциального тока. Прибор предназначен для отслеживания утечек тока,
+              возникающих при повреждении электропроводки и электроприборов</p>
           </div>
         </li>
         <li class="list-item">
@@ -119,10 +114,9 @@
             <div class="image-cover">
               <img src="img/blocks/avtomat.jpg" width="128" height="128" alt="Автомат" class="item-image">
             </div>
-            <p class="item-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio eos et aut id
-              consequatur error
-              magnam quos, vel, exercitationem maxime ipsa asperiores eius, iure necessitatibus sit saepe minus
-              quaerat cumque.</p>
+            <p class="item-p">Автоматический выключатель — это контактный коммутационный аппарат, который предназначен
+              для включения и отключения электрической цепи, защиты кабелей, проводов и электрических приборов от токов
+              перегрузки и от токов короткого замыкания</p>
           </div>
         </li>
       </ul>
