--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
       <ul class="nav">
         <li class="nav-item">
-          <a href="/">Щит</a>
+          <a href="/" class="active">Щит</a>
         </li>
         <li class="nav-item">
           <a href="shem.html">Схемы</a>
