Settings sprav page

--- a/shem.html
+++ b/shem.html
@@ -34,26 +34,16 @@
       </ul>
     </nav>
     <section class="section">
-      <ul class="list">
-        <li class="list-item">
+      <p class="item-p">Элетросчетчик</p>
+      <div class="image-cover">
+        <img src="img/shems/schet.jpg" width="132" height="128" alt="" class="item-image">
+      </div>
 
-        </li>
-        <li class="list-item">
-
-        </li>
-        <li class="list-item">
-
-        </li>
-        <li class="list-item">
-
-        </li>
-        <li class="list-item">
-
-        </li>
-        <li class="list-item">
-
-        </li>
-      </ul>
+      <hr>
+      <p class="item-p">Проходной выключатель</p>
+      <div class="image-cover">
+        <img src="img/shems/prohod.jpg" width="272" height="128" alt="" class="item-image">
+      </div>
     </section>
     <footer class="footer align-center">
       <small>&copy 2020 «Electro Shit»</small>
