--- a/sprav.html
+++ b/sprav.html
@@ -34,6 +34,28 @@
       </ul>
     </nav>
     <section class="section">
+      <p class="item-p"><strong>Расчет сечения кабеля и мощности автомата</strong></p>
+      <p class="item-p">- 1 мм кабеля выдерживает до 9 А, или до 2 кВт<br>
+        - Лучше медные, одножильные<br>
+        - Все многожильные обжимать или залуживать<br>
+        - Все скрутки обжимать или пропаивать, но лучше ч/з клеммы Вага<br>
+        - УЗО на розетки (но можно и на свет и на ванную и на плиту и на климат)<br>
+        - Автоматы (по комнатам, отдельно на свет, отдельно на розетки, отдельно на мощные эл. приборы)
+      </p>
+      <div class="image-cover">
+        <img src="img/sprav/tabl_raschet.png" width="320" height="110" alt="" class="item-image">
+      </div>
+
+      <hr>
+      <p class="item-p"><strong>Формулы расчета</strong></p>
+      <p class="item-p">- Напряжение (U, вольт) - разность потенциалов (скорость электронов)
+        <br>
+        - Сила тока (A, ампер) - количество электронов за секунду ч-з поверхность<br>
+        - Мощность (P, ватт) - произведение мгновенных значений напряжения и силы тока на участке цепи
+      </p>
+      <div class="image-cover">
+        <img src="img/sprav/zakon_oma.jpg" width="90" height="128" alt="" class="item-image">
+      </div>
 
     </section>
     <footer class="footer align-center">
