--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <title>Electro Shit</title>
 </head>
 
@@ -42,7 +43,9 @@
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/vvod.jpg" width="128" height="128" alt="" class="item-image">
+              <a data-fancybox="gallery" href="img/blocks/vvod.jpg">
+                <img src="img/blocks/vvod.jpg" width="128" height="128" alt="Вводной автомат" class="item-image">
+              </a>
             </div>
             <p class="item-p">
               Это аппарат коммутации, устанавливаемый перед счетчиком, который позволяет автоматически обесточить
@@ -58,7 +61,9 @@
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/schetchik.jpg" width="128" height="128" alt="" class="item-image">
+              <a data-fancybox="gallery" href="img/blocks/schetchik.jpg">
+                <img src="img/blocks/schetchik.jpg" width="128" height="128" alt="Счетчик" class="item-image">
+              </a>
             </div>
             <p class="item-p">Это прибор для измерения расхода электроэнергии переменного или постоянного тока (обычно в
               кВт·ч или А·ч)</p>
@@ -71,7 +76,9 @@
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/voltmetr.png" width="128" height="128" alt="" class="item-image">
+              <a data-fancybox="gallery" href="img/blocks/voltmetr.png">
+                <img src="img/blocks/voltmetr.png" width="128" height="128" alt="Вольтметр" class="item-image">
+              </a>
             </div>
             <p class="item-p">Это электроизмерительный прибор непосредственного отсчёта для определения напряжения или
               ЭДС в электрических цепях. Подключается параллельно нагрузке или источнику электрической энергии</p>
@@ -84,7 +91,9 @@
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/stabil.jpg" width="128" height="128" alt="УЗМ" class="item-image">
+              <a data-fancybox="gallery" href="img/blocks/stabil.jpg">
+                <img src="img/blocks/stabil.jpg" width="128" height="128" alt="УЗМ" class="item-image">
+              </a>
             </div>
             <p class="item-p">УЗМ расшифровывается, как «устройство защиты многофункциональное». Этот универсальный
               аппарат защитит электрооборудование от скачков напряжения, импульсных помех, повышенного или пониженного
@@ -98,7 +107,9 @@
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/uzo.webp" width="128" height="128" alt="УЗО" class="item-image">
+              <a data-fancybox="gallery" href="img/blocks/uzo.webp">
+                <img src="img/blocks/uzo.webp" width="128" height="128" alt="УЗО" class="item-image">
+              </a>
             </div>
             <p class="item-p">Расшифровывается как «устройство защитного отключения», а специалисты предпочитают
               называть его выключателем дифференциального тока. Прибор предназначен для отслеживания утечек тока,
@@ -112,7 +123,9 @@
           </div>
           <div class="item-body">
             <div class="image-cover">
-              <img src="img/blocks/avtomat.jpg" width="128" height="128" alt="Автомат" class="item-image">
+              <a data-fancybox="gallery" href="img/blocks/avtomat.jpg">
+                <img src="img/blocks/avtomat.jpg" width="128" height="128" alt="Автомат" class="item-image">
+              </a>
             </div>
             <p class="item-p">Автоматический выключатель — это контактный коммутационный аппарат, который предназначен
               для включения и отключения электрической цепи, защиты кабелей, проводов и электрических приборов от токов
@@ -125,6 +138,8 @@
       <small>&copy 2020 «Electro Shit»</small>
     </footer>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 
