--- a/sprav.html
+++ b/sprav.html
@@ -35,7 +35,7 @@
       </ul>
     </nav>
     <section class="section">
-      <h4 class="margin-top-16">Расчет сечения кабеля и мощности автомата</h4>
+      <h4 class="margin-h4">Расчет сечения кабеля и мощности автомата</h4>
       <p class="item-p">- 1 мм кабеля выдерживает до 9 А, или до 2 кВт<br>
         - Лучше медные, одножильные<br>
         - Все многожильные обжимать или залуживать<br>
@@ -50,7 +50,7 @@
       </div>
 
       <hr>
-      <h4 class="margin-top-16">Формулы расчета</h4>
+      <h4 class="margin-h4">Формулы расчета</h4>
       <p class="item-p">- Напряжение (U, вольт) - разность потенциалов (скорость электронов)
         <br>
         - Сила тока (A, ампер) - количество электронов за секунду ч-з поверхность<br>
