--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <nav>
       <ul class="nav">
         <li class="nav-item">
-          <a href="/" class="active">Щит</a>
+          <a href="/index.html" class="active">Щит</a>
         </li>
         <li class="nav-item">
           <a href="shem.html">Схемы</a>
