--- a/sprav.html
+++ b/sprav.html
@@ -24,7 +24,7 @@
     <nav>
       <ul class="nav">
         <li class="nav-item">
-          <a href="/">Щит</a>
+          <a href="/index.html">Щит</a>
         </li>
         <li class="nav-item">
           <a href="shem.html">Схемы</a>
