--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Description" content="Electro ⚡ Shit - сайт-справочник электрика" />
+  <meta name="robots" content="all" />
+  <meta name="Keywords"
+    content="электрощит, автомат, УЗО, УЗМ, подключение автомата, подключение счетчика, схема подключения счетчика" />
   <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
