--- a/shem.html
+++ b/shem.html
@@ -28,7 +28,7 @@
     <nav>
       <ul class="nav">
         <li class="nav-item">
-          <a href="/index.html">Щит</a>
+          <a href="index.html">Щит</a>
         </li>
         <li class="nav-item">
           <a href="shem.html" class="active">Схемы</a>
