--- a/sprav.html
+++ b/sprav.html
@@ -67,6 +67,17 @@
         </a>
       </div>
 
+      <hr>
+      <h4 class="margin-h4">Отличия ламп</h4>
+      <div class="image-cover">
+        <a data-fancybox="gallery" href="img/sprav/lampa_wat.jpg">
+          <img src="img/sprav/lampa_wat.jpg" width="128" height="128" alt="Сравнение ламп" class="item-image">
+        </a>
+        <a data-fancybox="gallery" href="img/sprav/lampa_temp.jpg">
+          <img src="img/sprav/lampa_temp.jpg" width="184" height="64" alt="Температура ламп" class="item-image">
+        </a>
+      </div>
+
     </section>
     <footer class="footer align-center">
       <small>&copy 2020 «Electro Shit»</small>
