Update Shem page

--- a/shem.html
+++ b/shem.html
@@ -39,20 +39,16 @@
       </ul>
     </nav>
     <section class="section">
-      <p class="item-p">Элетросчетчик</p>
+
       <div class="image-cover">
-        <a data-fancybox="gallery" href="img/shems/schet.jpg">
-          <img src="img/shems/schet.jpg" width="132" height="128" alt="" class="item-image">
+        <a data-fancybox="gallery" href="img/shems/schet.jpg" class="block-shem">
+          <h4>Элетросчетчик</h4>
+        </a>
+        <a data-fancybox="gallery" href="img/shems/prohod.jpg" class="block-shem">
+          <h4>Проходной выключатель</h4>
         </a>
       </div>
 
-      <hr>
-      <p class="item-p">Проходной выключатель</p>
-      <div class="image-cover">
-        <a data-fancybox="gallery" href="img/shems/prohod.jpg">
-          <img src="img/shems/prohod.jpg" width="272" height="128" alt="" class="item-image">
-        </a>
-      </div>
     </section>
     <footer class="footer align-center">
       <small>&copy 2020 «Electro Shit»</small>
