--- a/shem.html
+++ b/shem.html
@@ -42,10 +42,10 @@
 
       <div class="image-cover">
         <a data-fancybox="gallery" href="img/shems/schet.jpg" class="block-shem">
-          <h4>Элетросчетчик</h4>
+          <h4>Элетро&shy;счетчик</h4>
         </a>
         <a data-fancybox="gallery" href="img/shems/prohod.jpg" class="block-shem">
-          <h4>Проходной выключатель</h4>
+          <h4>Проход&shy;ной выклю&shy;чатель</h4>
         </a>
       </div>
 
