--- a/shem.html
+++ b/shem.html
@@ -45,7 +45,7 @@
           <h4>Элетро&shy;счетчик</h4>
         </a>
         <a data-fancybox="gallery" href="img/shems/prohod.jpg" class="block-shem">
-          <h4>Проход&shy;ной выклю&shy;чатель</h4>
+          <h4>Проход&shy;ной<br>выклю&shy;чатель</h4>
         </a>
       </div>
 
