Update page Shems

--- a/shem.html
+++ b/shem.html
@@ -15,8 +15,9 @@
   <link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#ffc40d">
   <meta name="msapplication-TileColor" content="#ffc40d">
   <meta name="theme-color" content="#ffffff">
-  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/shems.css">
   <title>Electro Shit - Схемы</title>
 </head>
 
@@ -38,18 +39,21 @@
         </li>
       </ul>
     </nav>
-    <section class="section">
 
-      <div class="image-cover">
-        <a data-fancybox="gallery" href="img/shems/schet.jpg" class="block-shem">
-          <h4>Элетро&shy;счетчик</h4>
+    <section>
+      <div class="shems">
+        <a data-fancybox="gallery" href="img/shems/schet.png" class="block-shem">
+          <img src="img/shems/icons/schet.svg" width="100%" alt="Схема подключения электросчетчика">
+          <h4 class="mt-8">Элетро&shy;счетчик</h4>
         </a>
-        <a data-fancybox="gallery" href="img/shems/prohod.jpg" class="block-shem">
-          <h4>Проход&shy;ной<br>выклю&shy;чатель</h4>
+
+        <a data-fancybox="gallery" href="img/shems/prohod.png" class="block-shem">
+          <img src="img/shems/icons/prohod.svg" width="100%" alt="Схема подключения проходного выключателя">
+          <h4 class="mt-8">Проход&shy;ной<br>выклю&shy;чатель</h4>
         </a>
       </div>
-
     </section>
+
     <footer class="footer align-center">
       <small>&copy 2020 «Electro Shit»</small>
     </footer>
