--- a/sprav.html
+++ b/sprav.html
@@ -58,7 +58,7 @@
       <h4 class="margin-h4">Формулы расчета</h4>
       <p class="item-p">- Напряжение (U, вольт) - разность потенциалов (скорость электронов)
         <br>
-        - Сила тока (A, ампер) - количество электронов за секунду ч-з поверхность<br>
+        - Сила тока (I, ампер) - количество электронов за секунду ч-з поверхность<br>
         - Мощность (P, ватт) - произведение мгновенных значений напряжения и силы тока на участке цепи
       </p>
       <div class="image-cover">
@@ -71,10 +71,10 @@
       <h4 class="margin-h4">Отличия ламп</h4>
       <div class="image-cover">
         <a data-fancybox="gallery" href="img/sprav/lampa_wat.jpg">
-          <img src="img/sprav/lampa_wat.jpg" width="128" height="128" alt="Сравнение ламп" class="item-image">
+          <img src="img/sprav/lampa_wat.jpg" width="128" alt="Сравнение ламп" class="item-image">
         </a>
-        <a data-fancybox="gallery" href="img/sprav/lampa_temp.jpg">
-          <img src="img/sprav/lampa_temp.jpg" width="184" height="64" alt="Температура ламп" class="item-image">
+        <a data-fancybox="gallery" href="img/sprav/lampa_temp2.png">
+          <img src="img/sprav/lampa_temp2.png" width="184" alt="Температура ламп" class="item-image">
         </a>
       </div>
 
