Update lamp info

--- a/shem.html
+++ b/shem.html
@@ -17,7 +17,6 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/shems.css">
   <title>Electro Shit - Схемы</title>
 </head>
 
@@ -41,13 +40,13 @@
     </nav>
 
     <section>
-      <div class="shems">
-        <a data-fancybox="gallery" href="img/shems/schet.png" class="block-shem">
+      <div class="cards">
+        <a data-fancybox="gallery" href="img/shems/schet.png" class="card">
           <img src="img/shems/icons/schet.svg" width="100%" alt="Схема подключения электросчетчика">
           <h4 class="mt-8">Элетро&shy;счетчик</h4>
         </a>
 
-        <a data-fancybox="gallery" href="img/shems/prohod.png" class="block-shem">
+        <a data-fancybox="gallery" href="img/shems/prohod.png" class="card">
           <img src="img/shems/icons/prohod.svg" width="100%" alt="Схема подключения проходного выключателя">
           <h4 class="mt-8">Проход&shy;ной<br>выклю&shy;чатель</h4>
         </a>
