--- a/sprav.html
+++ b/sprav.html
@@ -67,8 +67,10 @@
         </a>
       </div>
 
-      <hr>
-      <h4 class="margin-h4">Отличия ламп</h4>
+    </section>
+    <hr>
+    <section>
+      <!-- <h4 class="margin-h4">Отличия ламп</h4>
       <div class="image-cover">
         <a data-fancybox="gallery" href="img/sprav/lampa_wat.jpg">
           <img src="img/sprav/lampa_wat.jpg" width="128" alt="Сравнение ламп" class="item-image">
@@ -76,9 +78,22 @@
         <a data-fancybox="gallery" href="img/sprav/lampa_temp2.png">
           <img src="img/sprav/lampa_temp2.png" width="184" alt="Температура ламп" class="item-image">
         </a>
+      </div> -->
+      <h4 class="margin-h4">Отличия ламп</h4>
+      <div class="cards">
+        <a data-fancybox="gallery" href="img/sprav/lampa_wat.jpg" class="card">
+          <img src="img/sprav/icons/vidlamp.svg" alt="Виды ламп">
+          <h4 class="mt-8">Виды<br>ламп</h4>
+        </a>
+
+        <a data-fancybox="gallery" href="img/sprav/lampa_temp2.png" class="card">
+          <img src="img/sprav/icons/lamp.svg" alt="Температуры ламп">
+          <h4 class="mt-8">Темпе&shy;ратуры<br>ламп</h4>
+        </a>
       </div>
 
     </section>
+
     <footer class="footer align-center">
       <small>&copy 2020 «Electro Shit»</small>
     </footer>
