Update image shem

--- a/shem.html
+++ b/shem.html
@@ -46,7 +46,7 @@
           <h4 class="mt-8">Элетро&shy;счетчик</h4>
         </a>
 
-        <a data-fancybox="gallery" href="img/shems/prohod.svg" class="card">
+        <a data-fancybox="gallery" href="img/shems/prohod.png" class="card">
           <img src="img/shems/icons/prohod.svg" width="100%" alt="Схема подключения проходного выключателя">
           <h4 class="mt-8">Проход&shy;ной<br>выклю&shy;чатель</h4>
         </a>
