--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,8 @@
 </head>
 
 <body>
-  <div class="container">
+  <div id="app"></div>
+  <!-- <div class="container">
     <header class="header">
       <h1 class="align-center">Electro ⚡ Shit</h1>
     </header>
@@ -142,7 +143,7 @@
     <footer class="footer align-center">
       <small>&copy 2020 «Electro Shit»</small>
     </footer>
-  </div>
+  </div> -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="js/index.js"></script>
